fix progressbar view on mobile

--- a/src/components/MainSite/Marketing/marketing.module.scss
+++ b/src/components/MainSite/Marketing/marketing.module.scss
@@ -13,6 +13,5 @@
     color: $primaryCol;
     font-weight: bold;
     font-size: 15px;
-    transform: scale(1.1);
   }
 }
